--- a/assets/javascripts/discourse/templates/connectors/user-custom-preferences/user-nationalflags-preferences.hbs
+++ b/assets/javascripts/discourse/templates/connectors/user-custom-preferences/user-nationalflags-preferences.hbs
@@ -2,7 +2,7 @@
   <div class="control-group nationalflags">
     <label class="control-label">National Flag</label>
     <div class="controls">
-      {{combo-box valueAttribute="name" nameChanges=true content=natflaglist value=model.custom_fields.nationalflag_iso }}
+      {{combo-box valueAttribute="name2" nameChanges=true content=natflaglist value=model.custom_fields.nationalflag_iso }}
       <img class="nationalflag-usersummary" src="/plugins/discourse-nationalflags/images/nationalflags/{{model.custom_fields.nationalflag_iso}}.gif" />
     </div>
   </div>
